# Capsense

./: Cargo.toml  README.md  README_CN.md  build-all.ps1  build.rs
.github/workflows/: ci.yml  mirror.yml  release.yml
src/: config.rs  hook.rs  i18n.rs  main.rs  ui.rs  utils.rs  window.rs
